--- a/Makefile.inc
+++ b/Makefile.inc
@@ -26,8 +26,8 @@ LIBS=-L$(FIAT)/lib64 -lparkind_dp -lfiat -Wl,-rpath,$(FIAT)/lib64 -L$(ECTRANS)/l
 
 # PGI
 
-FIAT=/home/gmap/mrpm/marguina/hub/install
-ETRANS=/home/gmap/mrpm/marguina/hub/install
+FIAT=/home/gmap/mrpm/marguina/fiat/pginvtx-install
+ECTRANS=/home/gmap/mrpm/marguina/hub/install
 ECCODES=/home/gmap/mrpm/marguina/install/PGI2211/eccodes-2.14.0
 
 FFLAGS= -acc -mp -fPIC -ta=tesla:cc70 -Mcuda -Minfo=accel -gopt -Mlarge_arrays -Mlist -traceback -Mnofma -Mbyteswapio -Mbackslash
@@ -41,7 +41,12 @@ FC=/home/gmap/mrpm/marguina/install/gmkpack_support/wrapper/PGI2211/mpif90 \
    -I$(ECCODES)/include \
    $(FFLAGS)
 
-LIBS=-L$(FIAT)/lib64 -lparkind_dp -lfiat -Wl,-rpath,$(FIAT)/lib64 -L$(ECTRANS)/lib64 -ltrans_dp -Wl,-rpath,$(ECTRANS)/lib64 -L$(ECCODES)/lib -leccodes_f90 -leccodes -Wl,-rpath,$(ECCODES)/lib \
-	-L/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/math_libs/11.8/targets/x86_64-linux/lib/stubs/ -lcublas \
-        -L/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/compilers/lib -llapack_lp64 -lblas_lp64 -Wl,-rpath,/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/compilers/lib
+LIBS=-L$(FIAT)/lib64 -lparkind_dp -lfiat \
+  -Wl,-rpath,$(FIAT)/lib64 -L$(ECTRANS)/lib64 -ltrans_dp \
+  -Wl,-rpath,$(ECTRANS)/lib64 -L$(ECCODES)/lib -leccodes_f90 -leccodes \
+  -Wl,-rpath,$(ECCODES)/lib \
+  -L/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/math_libs/11.8/targets/x86_64-linux/lib/stubs/ -lcublas \
+  -L/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/compilers/lib -llapack_lp64 -lblas_lp64 \
+  -Wl,-rpath,/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/compilers/lib \
+  -Wl,-rpath,/opt/softs/nvidia/hpc_sdk/Linux_x86_64/22.11/cuda/11.8/targets/x86_64-linux/lib
 
